# MISC

./: 3560.py  3560.rs  README.md  generate_reg_sv.py  reg.sv  reg.xlsx  reg_generated.sv
homework0_rs/: Cargo.toml  README.md  build_sizes.bat  build_sizes.sh  homework0.cpp  homework0_commented.cpp
homework0_rs/src/: main.rs
